--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=notification-service
-server.port=0
+server.port=8641
+
+
+# Configuración de RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.virtual-host=/
+
 
 # Eureka Client Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
@@ -9,7 +18,7 @@ eureka.instance.hostname=localhost
 # Spring DataSource Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/healtlife-notification?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=12345678
 
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
